--- a/TeamPlayerProfiles/Service/Service.csproj
+++ b/TeamPlayerProfiles/Service/Service.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 </Project>
