--- a/TeamPlayerProfiles/WebAPI/appsettings.json
+++ b/TeamPlayerProfiles/WebAPI/appsettings.json
@@ -2,10 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=search_party;Username=postgres;Password=postgres"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore.Mvc": "Warning",
+        "Microsoft.AspNetCore.Routing": "Warning",
+        "Microsoft.AspNetCore.Hosting": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   },
   "AllowedHosts": "*"
