feat docker support

--- a/TeamPlayerProfiles/WebAPI/WebAPI.csproj
+++ b/TeamPlayerProfiles/WebAPI/WebAPI.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>a1c73f70-64c2-4c0e-9259-aa23af5cc2d9</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
