--- a/TeamPlayerProfiles/WebAPI/appsettings.json
+++ b/TeamPlayerProfiles/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=search_party;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=team_player_profiles;Username=postgres;Password=postgres"
   },
   "Serilog": {
     "MinimumLevel": {
