feat: конфигурация и запуск rmq, добавление интерфейсов для запросов на шину, доработка контроллеров и сервисов работы с досками профилей

--- a/TeamPlayerProfiles/WebAPI/appsettings.json
+++ b/TeamPlayerProfiles/WebAPI/appsettings.json
@@ -14,5 +14,11 @@
       }
     }
   },
+  "RmqSettings": {
+    "Host": "localhost",
+    "VHost": "/",
+    "Login": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
