--- a/TeamPlayerProfiles/Service/Service.csproj
+++ b/TeamPlayerProfiles/Service/Service.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MassTransit" Version="8.3.0" />
   </ItemGroup>
 
   <ItemGroup>
