--- a/UserProfiles/Service/Service.csproj
+++ b/UserProfiles/Service/Service.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
