feat: фильтрация и сортировка пользователей по ММР

--- a/UserProfiles/Common/Common.csproj
+++ b/UserProfiles/Common/Common.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Library\Library.csproj" />
+  </ItemGroup>
+
 </Project>
