--- a/UserProfiles/DataAccess/DataAccess.csproj
+++ b/UserProfiles/DataAccess/DataAccess.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Library\Library.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
