feat: UserProfiles http client

--- a/TeamPlayerProfiles/WebAPI/appsettings.json
+++ b/TeamPlayerProfiles/WebAPI/appsettings.json
@@ -20,5 +20,8 @@
     "Login": "guest",
     "Password": "guest"
   },
+  "HttpClientSettings": {
+    "UserProfilesUrl": "http://localhost:5264/"
+  },
   "AllowedHosts": "*"
 }
