feat: запросы на UserProfiles из UserInfo

--- a/UserInfo/WebAPI/appsettings.json
+++ b/UserInfo/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=team_player_profiles;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=user_profiles;Username=postgres;Password=postgres"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -14,11 +14,8 @@
       }
     }
   },
-  "RmqSettings": {
-    "Host": "localhost",
-    "VHost": "/",
-    "Login": "guest",
-    "Password": "guest"
+  "HttpClientSettings": {
+    "UserProfilesUrl": "http://localhost:5222/"
   },
   "AllowedHosts": "*"
 }
