--- a/Docker/migrations/docker-compose.yml
+++ b/Docker/migrations/docker-compose.yml
@@ -41,10 +41,10 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
-  user_profiles_migrations:
-    container_name: user_profiles_migrations
+  user_info_migrations:
+    container_name: user_info_migrations
     depends_on:
-      user_profiles_db:
+      user_info_db:
         condition: service_healthy
     build: 
       context: ../../
@@ -56,29 +56,29 @@ services:
       - "8083:8081" 
     environment:
       CONTAINER: true
-      DATABASE_HOSTNAME: user_profiles_db
+      DATABASE_HOSTNAME: user_info_db
       DATABASE_PORT: 5432
-      DATABASE_NAME: user_profiles
+      DATABASE_NAME: user_info
       DATABASE_USER: ${POSTGRES__USER}
       DATABASE_PASSWORD: ${POSTGRES__PASSWORD}
-      USER_PROFILES__ADD_MIGRATION: ${USER_PROFILES__ADD_MIGRATION}
-      USER_PROFILES__APPLY_MIGRATION: ${USER_PROFILES__APPLY_MIGRATION}
-      USER_PROFILES__MIGRATION_NAME: ${USER_PROFILES__MIGRATION_NAME}
-      USER_PROFILES__STARTUP_PROJECT_NAME: ${USER_PROFILES__STARTUP_PROJECT_NAME}
-      USER_PROFILES__CONTEXT_PROJECT_NAME: ${USER_PROFILES__CONTEXT_PROJECT_NAME}
-  user_profiles_db:
-    container_name: user_profiles_db
+      USER_INFO__ADD_MIGRATION: ${USER_INFO__ADD_MIGRATION}
+      USER_INFO__APPLY_MIGRATION: ${USER_INFO__APPLY_MIGRATION}
+      USER_INFO__MIGRATION_NAME: ${USER_INFO__MIGRATION_NAME}
+      USER_INFO__STARTUP_PROJECT_NAME: ${USER_INFO__STARTUP_PROJECT_NAME}
+      USER_INFO__CONTEXT_PROJECT_NAME: ${USER_INFO__CONTEXT_PROJECT_NAME}
+  user_info_db:
+    container_name: user_info_db
     image: postgres:latest
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_DB: user_profiles
+      POSTGRES_DB: user_info
       POSTGRES_USER: ${POSTGRES__USER}
       POSTGRES_PASSWORD: ${POSTGRES__PASSWORD}
     volumes: 
-      - user_profiles_pg_data:/var/lib/postgresql/data
+      - user_info_pg_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES__USER} -d user_profiles"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES__USER} -d user_info"]
       interval: 10s
       retries: 5
       start_period: 30s
@@ -87,6 +87,6 @@ services:
 volumes:
   team_player_profiles_pg_data:
     name: "team_player_profiles_pg_data"
-  user_profiles_pg_data:
-    name: "user_profiles_pg_data"
+  user_info_pg_data:
+    name: "user_info_pg_data"
 
