feat: userinfo library models, docker fix

--- a/Docker/migrations/docker-compose.yml
+++ b/Docker/migrations/docker-compose.yml
@@ -48,7 +48,7 @@ services:
         condition: service_healthy
     build: 
       context: ../../
-      dockerfile: UserProfiles/migrate.Dockerfile
+      dockerfile: UserInfo/migrate.Dockerfile
       args:
         BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
     ports: 
