--- a/Docker/run/.env
+++ b/Docker/run/.env
@@ -2,4 +2,5 @@ POSTGRES__USER=postgres
 POSTGRES__PASSWORD=postgres
 BUILD_CONFIGURATION=Release
 TEAM_PLAYER_PROFILES__SEED_DATABASE=false
-USER_PROFILES__SEED_DATABASE=false
+USER_INFO__SEED_DATABASE=false
+USER_PROFILES_URL=http://team_player_profiles_webapi:8080/
