--- a/Docker/run/docker-compose.yml
+++ b/Docker/run/docker-compose.yml
@@ -39,14 +39,14 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
-  user_profiles_webapi:
-    container_name: user_profiles_webapi
+  user_info_webapi:
+    container_name: user_info_webapi
     depends_on:
-      user_profiles_db:
+      user_info_db:
         condition: service_healthy
     build: 
       context: ../../
-      dockerfile: UserProfiles/build.Dockerfile
+      dockerfile: UserInfo/build.Dockerfile
       args:
         BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
     ports: 
@@ -54,25 +54,26 @@ services:
       - "8083:8081" 
     environment:
       CONTAINER: true
-      DATABASE_HOSTNAME: user_profiles_db
+      DATABASE_HOSTNAME: user_info_db
       DATABASE_PORT: 5432
-      DATABASE_NAME: user_profiles
+      DATABASE_NAME: user_info
       DATABASE_USER: ${POSTGRES__USER}
       DATABASE_PASSWORD: ${POSTGRES__PASSWORD}
-      USER_PROFILES__SEED_DATABASE: ${USER_PROFILES__SEED_DATABASE}
-  user_profiles_db:
-    container_name: user_profiles_db
+      USER_INFO__SEED_DATABASE: ${USER_INFO__SEED_DATABASE}
+      USER_PROFILES_URL: ${USER_PROFILES_URL}
+  user_info_db:
+    container_name: user_info_db
     image: postgres:latest
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_DB: user_profiles
+      POSTGRES_DB: user_info
       POSTGRES_USER: ${POSTGRES__USER}
       POSTGRES_PASSWORD: ${POSTGRES__PASSWORD}
     volumes: 
-      - user_profiles_pg_data:/var/lib/postgresql/data
+      - user_info_pg_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES__USER} -d user_profiles"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES__USER} -d user_info"]
       interval: 10s
       retries: 5
       start_period: 30s
@@ -82,7 +83,7 @@ volumes:
   team_player_profiles_pg_data:
     name: "team_player_profiles_pg_data"
     external: true
-  user_profiles_pg_data:
-    name: "user_profiles_pg_data"
+  user_info_pg_data:
+    name: "user_info_pg_data"
     external: true
 
