--- a/Auth/Infrastructure/Infrastructure.csproj
+++ b/Auth/Infrastructure/Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\EFData\EFData.csproj" />
   </ItemGroup>
 
 </Project>
