feat: middleware авторизации teamplayerprofiles

--- a/UserInfo/WebAPI/Properties/launchSettings.json
+++ b/UserInfo/WebAPI/Properties/launchSettings.json
@@ -5,7 +5,13 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "USER_PROFILES_URL": "http://localhost:5222/",
+        "DATABASE_HOSTNAME": "localhost",
+        "DATABASE_PORT": "5432",
+        "DATABASE_NAME": "user_info",
+        "DATABASE_USER": "postgres",
+        "DATABASE_PASSWORD": "postgres"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5264"
@@ -15,7 +21,13 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "USER_PROFILES_URL": "http://localhost:5222/",
+        "DATABASE_HOSTNAME": "localhost",
+        "DATABASE_PORT": "5432",
+        "DATABASE_NAME": "user_info",
+        "DATABASE_USER": "postgres",
+        "DATABASE_PASSWORD": "postgres"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7133;http://localhost:5264"
