--- a/Auth/APIAuth/APIAuth.csproj
+++ b/Auth/APIAuth/APIAuth.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Library\Library.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\EFData\EFData.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
