--- a/TeamPlayerProfiles/WebAPI/WebAPI.csproj
+++ b/TeamPlayerProfiles/WebAPI/WebAPI.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MassTransit" Version="8.3.0" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
