feat: user auth test data seed

--- a/Docker/run/docker-compose.yml
+++ b/Docker/run/docker-compose.yml
@@ -99,6 +99,7 @@ services:
       DATABASE_NAME: user_auth
       DATABASE_USER: ${POSTGRES__USER}
       DATABASE_PASSWORD: ${POSTGRES__PASSWORD}
+      USER_AUTH__SEED_DATABASE: ${USER_AUTH__SEED_DATABASE}
       TOKEN_KEY: ${TOKEN_KEY}
       REFRESH_KEY: ${REFRESH_KEY}
   user_auth_db:
