--- a/TeamPlayerProfiles/WebAPI/Properties/launchSettings.json
+++ b/TeamPlayerProfiles/WebAPI/Properties/launchSettings.json
@@ -13,7 +13,11 @@
         "DATABASE_PORT": "5432",
         "DATABASE_NAME": "team_player_profiles",
         "DATABASE_USER": "postgres",
-        "DATABASE_PASSWORD": "postgres"
+        "DATABASE_PASSWORD": "postgres",
+        "RABBITMQ_HOST": "localhost",
+        "RABBITMQ_VHOST": "/",
+        "RABBITMQ_LOGIN": "guest",
+        "RABBITMQ_PASSWORD": "guest"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5222"
@@ -31,7 +35,11 @@
         "DATABASE_PORT": "5432",
         "DATABASE_NAME": "team_player_profiles",
         "DATABASE_USER": "postgres",
-        "DATABASE_PASSWORD": "postgres"
+        "DATABASE_PASSWORD": "postgres",
+        "RABBITMQ_HOST": "localhost",
+        "RABBITMQ_VHOST": "/",
+        "RABBITMQ_LOGIN": "guest",
+        "RABBITMQ_PASSWORD": "guest"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7004;http://localhost:5222"
