--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb.csproj
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Core\Authentication\" />
       <Folder Include="Core\Models\" />
     </ItemGroup>
 
