--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Properties/launchSettings.json
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Properties/launchSettings.json
@@ -16,7 +16,10 @@
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "http://localhost:5245",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "TEAM_PLAYER_PROFILES_URL":"http://localhost:8080/",
+          "AUTHENTICATION_SERVICE_URL":"http://localhost:8084/",
+          "USER_INFO_SERVICE_URL":"http://localhost:8082/"
         }
       },
       "https": {
