feat: обустройка логики промежуток

--- a/UserMessaging/DataAccess/DataAccess.csproj
+++ b/UserMessaging/DataAccess/DataAccess.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Library\Library.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
