feat: state паттерн для сообщений

--- a/UserMessaging/Service/Service.csproj
+++ b/UserMessaging/Service/Service.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\Library\Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Implementations\MessageManagement\" />
+  </ItemGroup>
+
 </Project>
