--- a/Auth/APIAuth/appsettings.json
+++ b/Auth/APIAuth/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=user_auth;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=user_auth;Username=postgres;Password=root123"
   }
 }
