--- a/UserInfo/WebAPI/Properties/launchSettings.json
+++ b/UserInfo/WebAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "DATABASE_PORT": "5432",
         "DATABASE_NAME": "user_info",
         "DATABASE_USER": "postgres",
-        "DATABASE_PASSWORD": "postgres"
+        "DATABASE_PASSWORD": "root123"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5264"
@@ -33,7 +33,7 @@
         "DATABASE_PORT": "5432",
         "DATABASE_NAME": "user_info",
         "DATABASE_USER": "postgres",
-        "DATABASE_PASSWORD": "postgres"
+        "DATABASE_PASSWORD": "root123"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7133;http://localhost:5264"
