--- a/Docker/run/docker-compose.yml
+++ b/Docker/run/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     depends_on:
       team_player_profiles_db:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy 
     build: 
       context: ../../
       dockerfile: TeamPlayerProfiles/build.Dockerfile
@@ -21,8 +23,13 @@ services:
       DATABASE_USER: ${POSTGRES__USER}
       DATABASE_PASSWORD: ${POSTGRES__PASSWORD}
       AUTHENTICATION_SERVICE_URL: ${AUTHENTICATION_SERVICE_URL}
+      USER_MESSAGING_URL: ${USER_MESSAGING_URL}
       TEAM_PLAYER_PROFILES__SEED_DATABASE: ${TEAM_PLAYER_PROFILES__SEED_DATABASE}
-      TOKEN_KEY: ${TOKEN_KEY}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
+      RABBITMQ_VHOST: ${RABBITMQ_VHOST}
+      RABBITMQ_LOGIN: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_PASSWORD: ${RABBITMQ_DEFAULT_PASS}
+      PUBLIC_KEY: ${PUBLIC_KEY}
   team_player_profiles_db:
     container_name: team_player_profiles_db
     image: postgres:latest
@@ -62,7 +69,7 @@ services:
       USER_INFO__SEED_DATABASE: ${USER_INFO__SEED_DATABASE}
       TEAM_PLAYER_PROFILES_URL: ${TEAM_PLAYER_PROFILES_URL}
       AUTHENTICATION_SERVICE_URL: ${AUTHENTICATION_SERVICE_URL}
-      TOKEN_KEY: ${TOKEN_KEY}
+      PUBLIC_KEY: ${PUBLIC_KEY}
   user_info_db:
     container_name: user_info_db
     image: postgres:latest
@@ -100,7 +107,9 @@ services:
       DATABASE_USER: ${POSTGRES__USER}
       DATABASE_PASSWORD: ${POSTGRES__PASSWORD}
       USER_AUTH__SEED_DATABASE: ${USER_AUTH__SEED_DATABASE}
-      TOKEN_KEY: ${TOKEN_KEY}
+      USER_INFO_URL: ${USER_INFO_URL}
+      PRIVATE_KEY: ${PRIVATE_KEY}
+      PUBLIC_KEY: ${PUBLIC_KEY}
       REFRESH_KEY: ${REFRESH_KEY}
   user_auth_db:
     container_name: user_auth_db
@@ -119,6 +128,71 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
+  user_messaging_webapi:
+    container_name: user_messaging_webapi
+    depends_on:
+      user_messaging_db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy  
+    build: 
+      context: ../../
+      dockerfile: UserMessaging/build.Dockerfile
+      args:
+        BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
+    ports: 
+      - "8086:8080" 
+      - "8087:8081" 
+    environment:
+      DATABASE_HOSTNAME: user_messaging_db
+      DATABASE_PORT: 5432
+      DATABASE_NAME: user_messaging
+      DATABASE_USER: ${POSTGRES__USER}
+      DATABASE_PASSWORD: ${POSTGRES__PASSWORD}
+      TEAM_PLAYER_PROFILES_URL: ${TEAM_PLAYER_PROFILES_URL}
+      AUTHENTICATION_SERVICE_URL: ${AUTHENTICATION_SERVICE_URL}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
+      RABBITMQ_VHOST: ${RABBITMQ_VHOST}
+      RABBITMQ_LOGIN: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_PASSWORD: ${RABBITMQ_DEFAULT_PASS}
+      PUBLIC_KEY: ${PUBLIC_KEY}
+  user_messaging_db:
+    container_name: user_messaging_db
+    image: postgres:latest
+    ports:
+      - "5435:5432"
+    environment:
+      POSTGRES_DB: user_messaging
+      POSTGRES_USER: ${POSTGRES__USER}
+      POSTGRES_PASSWORD: ${POSTGRES__PASSWORD}
+    volumes: 
+      - user_messaging_pg_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES__USER} -d user_messaging"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+  rabbitmq:
+    container_name: search_party_message_bus
+    build: 
+      context: ../../
+      dockerfile: Docker/rabbitmq/Dockerfile
+    hostname: search_party_message_bus
+    ports:
+    - 15672:15672
+    - 5672:5672
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+    volumes:
+    - search_party_message_bus_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics ping"]
+      start_period: 30s
+      interval: 10s
+      timeout: 10s
+      retries: 5  
 
 volumes:
   team_player_profiles_pg_data:
@@ -129,6 +203,12 @@ volumes:
     external: true
   user_auth_pg_data:
     name: "user_auth_pg_data"
+    external: true
+  user_messaging_pg_data:
+    name: "user_messaging_pg_data"
+    external: true
+  search_party_message_bus_data:
+    name: "search_party_message_bus_data"   
     external: true
 
 
