--- a/Docker/run/docker-compose.yml
+++ b/Docker/run/docker-compose.yml
@@ -30,6 +30,12 @@ services:
       RABBITMQ_LOGIN: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_PASSWORD: ${RABBITMQ_DEFAULT_PASS}
       PUBLIC_KEY: ${PUBLIC_KEY}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/healthcheck"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   team_player_profiles_db:
     container_name: team_player_profiles_db
     image: postgres:latest
@@ -70,6 +76,12 @@ services:
       TEAM_PLAYER_PROFILES_URL: ${TEAM_PLAYER_PROFILES_URL}
       AUTHENTICATION_SERVICE_URL: ${AUTHENTICATION_SERVICE_URL}
       PUBLIC_KEY: ${PUBLIC_KEY}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/healthcheck"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   user_info_db:
     container_name: user_info_db
     image: postgres:latest
@@ -111,6 +123,12 @@ services:
       PRIVATE_KEY: ${PRIVATE_KEY}
       PUBLIC_KEY: ${PUBLIC_KEY}
       REFRESH_KEY: ${REFRESH_KEY}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/healthcheck"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   user_auth_db:
     container_name: user_auth_db
     image: postgres:latest
@@ -156,6 +174,12 @@ services:
       RABBITMQ_LOGIN: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_PASSWORD: ${RABBITMQ_DEFAULT_PASS}
       PUBLIC_KEY: ${PUBLIC_KEY}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/healthcheck"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   user_messaging_db:
     container_name: user_messaging_db
     image: postgres:latest
@@ -173,6 +197,30 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
+  search_party_front:
+    container_name: search_party_front
+    depends_on:
+      team_player_profiles_webapi:
+        condition: service_healthy
+      user_info_webapi:
+        condition: service_healthy
+      user_auth_webapi:
+        condition: service_healthy  
+      user_messaging_webapi:
+        condition: service_healthy
+    build: 
+      context: ../../
+      dockerfile: SearchPartyFront/SearchPartyWeb/Dockerfile
+      args:
+        BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
+    ports: 
+      - "3000:8080" 
+      - "3030:8081"
+    environment:
+      TEAM_PLAYER_PROFILES_URL: ${TEAM_PLAYER_PROFILES_URL}
+      AUTHENTICATION_SERVICE_URL: ${AUTHENTICATION_SERVICE_URL}
+      USER_INFO_URL: ${USER_INFO_URL}
+      USER_MESSAGING_URL: ${AUTHENTICATION_SERVICE_URL}
   rabbitmq:
     container_name: search_party_message_bus
     build: 
