--- a/SearchPartyFrontReact/package.json
+++ b/SearchPartyFrontReact/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
+		"@types/node": "^22.13.13",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
